Fix .webamp container height collapse from absolute-positioned children

--- a/public/css/winamp.css
+++ b/public/css/winamp.css
@@ -1366,6 +1366,7 @@
 .webamp {
   position: relative;
   width: 275px;
+  height: 116px;
   transform: scale(2);
   transform-origin: top left;
   image-rendering: pixelated;
